--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-ico" href="/favicon.ico" />
+    <link rel="icon" type="image/x-ico" href="/faviconBET.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BlockErvis Token</title>
   </head>
